--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "i18next": "^20.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-facebook-login": "^4.1.1",
     "react-i18next": "^11.8.15",
     "react-icons": "^4.2.0",
     "react-query": "^3.15.2",
@@ -72,6 +73,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-facebook-login": "^4.1.4",
     "@types/react-input-mask": "^3.0.0",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.9",
