--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "@types/facebook-js-sdk": "^3.3.4",
     "@types/jest": "^26.0.23",
     "@types/node": "^12.20.11",
     "@types/react": "^17.0.4",
@@ -22,7 +23,6 @@
     "i18next": "^20.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-facebook-login": "^4.1.1",
     "react-i18next": "^11.8.15",
     "react-icons": "^4.2.0",
     "react-query": "^3.15.2",
