fix: update env structure (#9)

--- a/.env-structure
+++ b/.env-structure
@@ -1,2 +1,3 @@
 REACT_APP_API_URL=<enter api url here>
 REACT_APP_SPOTIFY_CLIENT_ID=<enter spotify client id here>
+REACT_APP_FACEBOOK_APP_ID=<enter facebook app id here>
