--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-share": "^4.4.0",
     "spotify-web-api-node": "4.0.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.2.4",
