--- a/.env-structure
+++ b/.env-structure
@@ -1,2 +1,4 @@
 REACT_APP_API_URL=<enter api url here>
 REACT_APP_SPOTIFY_CLIENT_ID=<enter spotify client id here>
+REACT_APP_GENIUS_API_URL=<enter genius api url here>
+REACT_APP_GENIUS_ACCESS_TOKEN=<enter genius api access token here>
