feat: add google login button (#22)

--- a/.env-structure
+++ b/.env-structure
@@ -3,3 +3,4 @@ REACT_APP_SPOTIFY_CLIENT_ID=<enter spotify client id here>
 REACT_APP_FACEBOOK_APP_ID=<enter facebook app id here>
 REACT_APP_GENIUS_API_URL=<enter genius api url here>
 REACT_APP_GENIUS_ACCESS_TOKEN=<enter genius api access token here>
+REACT_APP_GOOGLE_CLIENT_ID=<enter google client id here>
