--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "i18next": "^20.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-google-button": "^0.7.2",
+    "react-google-login": "^5.2.2",
     "react-i18next": "^11.8.15",
     "react-icons": "^4.2.0",
     "react-query": "^3.15.2",
